Changed margins to fix the vertical spacing issue

--- a/_includes/css/custom.css
+++ b/_includes/css/custom.css
@@ -44,3 +44,8 @@ body.sticky-footer footer {
     border-radius: 5px;
   }
 }
+
+section h3.section-subheading {
+    margin-bottom: 30px;
+    margin-top: 50px;
+}
